--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.11",
     "@types/node": "^20",
     "@types/react": "18.2.19",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
