--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
       interval: "weekly"
     labels:
       - "dependencies"
-  - pakage-ecosystem: "cargo"
+  - package-ecosystem: "cargo"
     directory: "/src-tauri"
     schedule:
       interval: "weekly"
