--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^14.1.0",
     "react-toastify": "^10.0.5",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
+    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
