--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ webbrowser = "0.8.14"
 reqwest = { version = "0.12.3", features = ["json"] }
 tokio = { version = "1.37.0", features = ["process"] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
