--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,10 +26,10 @@ uuid = { version = "1.2.2", features = ["v4", "serde"] }
 webbrowser = "0.8.14"
 reqwest = { version = "0.12.3", features = ["json"] }
 tokio = { version = "1.37.0", features = ["process"] }
-tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+chrono = "0.4.24"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
