--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@tauri-apps/api": "^1.5.3",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "i18next": "^23.10.1",
     "next": "14.1.4",
     "react": "^18",
