--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
     "react-toastify": "^10.0.5",
+    "react-virtuoso": "^4.7.8",
     "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
     "uuid": "^9.0.1"
   },
